# Pg2Pq

./: .gitignore  README.md  setup.cfg  setup.py
configurations/: logging.json
configurations/schema/: public.dailystatistics.json  public.dailystatistics_m1d.json  public.dailystatistics_m7d.json
pg2pq/: __main__.py  alter_source.py  arguments.py  command_arguments.py  dump_table.py  env_generator.py  exceptions.py  merge.py  metadata.py  models.py  to_netcdf.py
pg2pq/utilities/: __init__.py  _settings.py  common.py  constants.py  enums.py  templating.py
