[metadata]
name = Pg2Pq
version = 0.1.0
description = A suite used to dump postgresql tables to parquet files
author = Christopher Tubbs
author_email = christopherotubbs@gmail.com

[options]
packages = find:
install_requires =
    wheel
    pydantic
    polars
    pyarrow
    psycopg
    sqlalchemy
    dotenv
    asyncpg
python_requires = >=3.11

[options.entry_points]
console_scripts =
    pg2pq = pg2pq.__main__:main
